| Summary: | ASTERISK-28427: new mwi.h include missing from some dahdi source files, causes build failure | ||
| Reporter: | Guido Falsi (madpilot) | Labels: | |
| Date Opened: | 2019-05-23 09:42:44 | Date Closed: | 2019-05-24 09:03:30 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi |
| Versions: | 13.27.0 16.4.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Discovered while testing RC1 in the FreeBSD port, which by default enables chan_dahdi | Attachments: | |
| Description: | As described when building with chan_dahdi support the latest RCs fail to build due missing definitions which have been moved to the mwi.h include file in commit 4ea20c9c85bbc9da11a4c26aab1f7a8b6117ee01 | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-05-23 09:42:44.900-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Guido Falsi (madpilot) 2019-05-23 09:43:16.767-0500 Forgot to mention, I'm going to push patches to gerrit for this. By: Friendly Automation (friendly-automation) 2019-05-24 09:03:32.498-0500 Change 11403 merged by Friendly Automation: chan_dahdi: add missing include. [https://gerrit.asterisk.org/c/asterisk/+/11403|https://gerrit.asterisk.org/c/asterisk/+/11403] By: Friendly Automation (friendly-automation) 2019-05-24 09:04:25.641-0500 Change 11406 merged by Friendly Automation: chan_dahdi: add missing include. [https://gerrit.asterisk.org/c/asterisk/+/11406|https://gerrit.asterisk.org/c/asterisk/+/11406] By: Friendly Automation (friendly-automation) 2019-05-24 09:05:59.434-0500 Change 11404 merged by Friendly Automation: chan_dahdi: add missing include. [https://gerrit.asterisk.org/c/asterisk/+/11404|https://gerrit.asterisk.org/c/asterisk/+/11404] By: Friendly Automation (friendly-automation) 2019-05-24 09:08:05.121-0500 Change 11405 merged by Friendly Automation: chan_dahdi: add missing include. [https://gerrit.asterisk.org/c/asterisk/+/11405|https://gerrit.asterisk.org/c/asterisk/+/11405] By: Friendly Automation (friendly-automation) 2019-05-24 09:44:31.371-0500 Change 11407 merged by Friendly Automation: chan_dahdi: add missing include. [https://gerrit.asterisk.org/c/asterisk/+/11407|https://gerrit.asterisk.org/c/asterisk/+/11407] | ||